compiler_check_results/gcc_results.txt
=================================
Checking with: gcc
=================================

Checking src/varintAdaptive.c                     ... ✓
Checking src/varintAdaptiveTest.c                 ... ✓
Checking src/varintBitmap.c                       ... ✓
Checking src/varintBitmapTest.c                   ... ✓
Checking src/varintChained.c                      ... ✓
Checking src/varintChainedSimple.c                ... ✓
Checking src/varintCompare.c                      ... ✗
  Errors:
    In file included from src/varintCompare.c:66:
    src/perf.h:88:1: error: missing initializer for field 'tsc' of 'struct <anonymous>' [-Werror=missing-field-initializers]
       88 | static perfState lps = {{{0}}};
          | ^~~~~~
    src/perf.h:71:25: note: 'tsc' declared here

Checking src/varintDelta.c                        ... ✓
Checking src/varintDeltaTest.c                    ... ✓
Checking src/varintDict.c                         ... ✓
Checking src/varintDictTest.c                     ... ✓
Checking src/varintDimension.c                    ... ✗
  Errors:
    src/varintDimension.c: In function 'varintDimensionPairEntryGetFloatHalfIntrinsic':
    src/varintDimension.c:212:14: error: variable 'half_holder' set but not used [-Werror=unused-but-set-variable]
      212 |     uint16_t half_holder[128 / sizeof(uint16_t)] = {0};
          |              ^~~~~~~~~~~
    In file included from /usr/lib/gcc/x86_64-linux-gnu/13/include/immintrin.h:111,

Checking src/varintDimensionTest.c                ... ✓
Checking src/varintExternal.c                     ... ✓
Checking src/varintExternalBigEndian.c            ... ✓
Checking src/varintFOR.c                          ... ✓
Checking src/varintFORTest.c                      ... ✓
Checking src/varintFloat.c                        ... ✓
Checking src/varintFloatTest.c                    ... ✓
Checking src/varintGroup.c                        ... ✓
Checking src/varintGroupTest.c                    ... ✓
Checking src/varintPFOR.c                         ... ✓
Checking src/varintPFORTest.c                     ... ✓
Checking src/varintPackedTest.c                   ... ✗
  Errors:
    In file included from src/varintPackedTest.c:36:
    src/perf.h:88:1: error: missing initializer for field 'tsc' of 'struct <anonymous>' [-Werror=missing-field-initializers]
       88 | static perfState lps = {{{0}}};
          | ^~~~~~
    src/perf.h:71:25: note: 'tsc' declared here

Checking src/varintTagged.c                       ... ✓

=================================
Results: 22/25 files passed
=================================

Failed files:
  - src/varintCompare.c
  - src/varintDimension.c
  - src/varintPackedTest.c
